--- a/sass/master.scss
+++ b/sass/master.scss
@@ -2,8 +2,10 @@
 @import 'modules/_mediaqueries';
 @import 'modules/_vars.scss';
 
-
+@import 'modules/_mixins';
 
 @import 'modules/_main.scss';
+@import 'modules/_nav.scss';
+@import 'modules/_index.scss';
 
 
