--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -1,4 +1,18 @@
+html {
+    box-sizing: border-box;
+  }
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit; 
+}
 
 body {
-    font: $sub-font;
+    font: $main-font;
 }
+
+// .hidden {
+//     display: none;
+// }
+
