--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -1,4 +1,5 @@
 
+@import 'https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap';
 
 $main-text-color: #2d221f;
 $sub-text-color: #666666;
@@ -7,5 +8,5 @@ $blue-bg-color: #9cf1f0;
 $yellow-bg-color: #fef281;
 $green-bg-color: #99f0bb;
 
-$main-font: 'LibreBaskerville', serif;
-$sub-font: 'Roboto', sans-serif;
+$main-font: 'Libre Baskerville', serif;
+$sub-font: 'NotoSans', sans-serif;
