--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,85 @@
-@import 'https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap';
+@media screen and (max-width: 769px) {
+  .mNav {
+    width: 100%;
+    height: 100%;
+    background-color: cornflowerblue;
+    position: fixed;
+    top: 0;
+    right: -500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .change {
+    right: 0;
+  }
+
+  .hamburger-menu {
+    width: 60px;
+    height: 60px;
+    background-color: red;
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .line {
+    width: 100%;
+    height: 3px;
+    background-color: chocolate;
+    transition: all 0.5s;
+  }
+
+  .change .line-1 {
+    transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
+  }
+
+  .change .line-2 {
+    opacity: 0;
+  }
+
+  .change .line-3 {
+    transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
+  }
+
+  .nav-list {
+    text-align: right;
+  }
+
+  .nav-item {
+    margin: 25px;
+  }
+
+  .nav-link {
+    text-decoration: none;
+    color: #2d221f;
+    text-transform: uppercase;
+    position: relative;
+    padding-top: 5px;
+  }
+  .nav-link ::before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: darkgoldenrod;
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+  }
+  .nav-link ::before {
+    top: 0;
+    transform-origin: left;
+  }
+  .nav-link :hover::before {
+    transform: scaleX(1);
+  }
+}
 html {
   box-sizing: border-box;
 }
@@ -10,100 +91,70 @@ html {
 }
 
 body {
-  font: "Libre Baskerville", serif;
+  font-family: "Noto Sans", sans-serif;
+}
+
+.hidden {
+  display: none;
+}
+
+footer {
+  background-color: darkorchid;
+  height: 80px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 0fr;
+  align-items: center;
+}
+
+.copyright {
+  background-color: darkred;
+  height: 60px;
+  width: 150px;
+}
+
+.sns {
+  background-color: darksalmon;
+  height: 60px;
+  width: 150px;
 }
 
 header {
   width: 100%;
-  height: 100px;
+  height: 80px;
   background: #9cf1f0;
   overflow: hidden;
   position: fixed;
   top: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+img {
+  width: 80px;
+  height: 100%;
 }
 
 .mNav {
-  width: 300px;
-  height: 100%;
-  background-color: cornflowerblue;
-  position: fixed;
-  top: 0;
-  right: -300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.change {
-  right: 0;
-}
-
-.hamburger-menu {
-  width: 60px;
-  height: 60px;
-  background-color: red;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.line {
-  width: 100%;
-  height: 3px;
-  background-color: chocolate;
-  transition: all 0.5s;
-}
-
-.change .line-1 {
-  transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
-}
-
-.change .line-2 {
-  opacity: 0;
-}
-
-.change .line-3 {
-  transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
+  width: 50%;
 }
 
 .nav-list {
-  text-align: right;
+  display: flex;
+  height: 100%;
+  background-color: darkgoldenrod;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: auto;
 }
-
-.nav-item {
-  margin: 25px;
+.nav-list li {
+  font-size: 20px;
+  font-weight: 300;
 }
-
-.nav-link {
+.nav-list li a {
   text-decoration: none;
   color: #2d221f;
-  text-transform: uppercase;
-  position: relative;
-  padding-top: 5px;
-}
-
-.nav-link::before {
-  content: "";
-  width: 100%;
-  height: 2px;
-  background-color: darkgoldenrod;
-  position: absolute;
-  left: 0;
-  transform: scaleX(0);
-  transition: transform 0.5s;
-}
-
-.nav-link::before {
-  top: 0;
-  transform-origin: left;
-}
-
-.nav-link:hover::before {
-  transform: scaleX(1);
 }
 
 .container-wrapper {
