--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -1,3 +1,90 @@
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 769px) {
+    .mNav {
+        width: 100%;
+        height: 100%;
+        background-color: cornflowerblue;
+        position: fixed;
+        top: 0;
+        right: -500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    
+    .change {
+        right: 0;
+    }
+    
+    .hamburger-menu {
+        width: 60px;
+        height: 60px;
+        background-color: red;
+        position: fixed;
+        top:10px;
+        right:20px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .line {
+        width: 100%;
+        height: 3px;
+        background-color: chocolate;
+        transition: all 0.5s;
+    }
+    
+    .change .line-1 {
+        transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
+       }
+       
+    .change .line-2 {
+        opacity: 0;
+    }
+    
+    .change .line-3 {
+        transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
+    }
+    
+    .nav-list {
+        text-align: right;
+    }
+    
+    .nav-item {
+        margin: 25px;
+       
+    }
+
+    .nav-link {
+
+        text-decoration: none;
+        color:#2d221f;
+        text-transform: uppercase;
+        position: relative;
+        padding-top: 5px;
+          
+        ::before {
+            content: "";
+            width: 100%;
+            height: 2px;
+            background-color: darkgoldenrod;
+            position: absolute;
+            left: 0;
+            transform: scaleX(0);
+            transition: transform 0.5s;
+        }
+        
+        ::before {
+            top: 0;
+            transform-origin: left;
+        }
+        
+        :hover::before {
+            transform: scaleX(1);
+        }
+    }
+    
     
 }
