--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,95 +1,42 @@
 header {
     width: 100%;
-    height: 100px;
+    height: 80px;
     background: $blue-bg-color;
     overflow: hidden;
     position: fixed;
     top:0;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+img {
+    width: 80px;
+    height: 100%;
 }
 
 .mNav {
-    width: 300px;
-    height: 100%;
-    background-color: cornflowerblue;
-    position: fixed;
-    top: 0;
-    right: -300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.change {
-    right: 0;
-}
-
-.hamburger-menu {
-    width: 60px;
-    height: 60px;
-    background-color: red;
-    position: fixed;
-    top: 20px;
-    right:20px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.line {
-    width: 100%;
-    height: 3px;
-    background-color: chocolate;
-    transition: all 0.5s;
-}
-
-.change .line-1 {
-    transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
-   }
-   
-.change .line-2 {
-    opacity: 0;
-}
-
-.change .line-3 {
-    transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
+    width: 50%;
 }
 
 .nav-list {
-    text-align: right;
-}
-
-.nav-item {
-    margin: 25px;
-}
-
-.nav-link {
-    text-decoration: none;
-    color:$main-text-color;
-    text-transform: uppercase;
-    position: relative;
-    padding-top: 5px;
-}
-
-.nav-link::before {
-    content: "";
-    width: 100%;
-    height: 2px;
+    display: flex;
+    height: 100%;
     background-color: darkgoldenrod;
-    position: absolute;
-    left: 0;
-    transform: scaleX(0);
-    transition: transform 0.5s;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: auto;
+
+    li { 
+        font-size: 20px;
+        font-weight: 300;
+
+       a {  text-decoration: none;
+            color: $main-text-color; }
+    }
 }
 
-.nav-link::before {
-    top: 0;
-    transform-origin: left;
-}
-
-.nav-link:hover::before {
-    transform: scaleX(1);
-}
 
 
 
