--- a/css/master.css
+++ b/css/master.css
@@ -1,182 +1,1 @@
-@media screen and (max-width: 769px) {
-  .mNav {
-    width: 100%;
-    height: 100%;
-    background-color: cornflowerblue;
-    position: fixed;
-    top: 0;
-    right: -500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .change {
-    right: 0;
-  }
-
-  .hamburger-menu {
-    width: 60px;
-    height: 60px;
-    background-color: red;
-    position: fixed;
-    top: 10px;
-    right: 20px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-  .line {
-    width: 100%;
-    height: 3px;
-    background-color: chocolate;
-    transition: all 0.5s;
-  }
-
-  .change .line-1 {
-    transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
-  }
-
-  .change .line-2 {
-    opacity: 0;
-  }
-
-  .change .line-3 {
-    transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
-  }
-
-  .nav-list {
-    text-align: right;
-  }
-
-  .nav-item {
-    margin: 25px;
-  }
-
-  .nav-link {
-    text-decoration: none;
-    color: #2d221f;
-    text-transform: uppercase;
-    position: relative;
-    padding-top: 5px;
-  }
-  .nav-link ::before {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: darkgoldenrod;
-    position: absolute;
-    left: 0;
-    transform: scaleX(0);
-    transition: transform 0.5s;
-  }
-  .nav-link ::before {
-    top: 0;
-    transform-origin: left;
-  }
-  .nav-link :hover::before {
-    transform: scaleX(1);
-  }
-}
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-body {
-  font-family: "Noto Sans", sans-serif;
-}
-
-.hidden {
-  display: none;
-}
-
-footer {
-  background-color: darkorchid;
-  height: 80px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 0fr;
-  align-items: center;
-}
-
-.copyright {
-  background-color: darkred;
-  height: 60px;
-  width: 150px;
-}
-
-.sns {
-  background-color: darksalmon;
-  height: 60px;
-  width: 150px;
-}
-
-header {
-  width: 100%;
-  height: 80px;
-  background: #9cf1f0;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-img {
-  width: 80px;
-  height: 100%;
-}
-
-.mNav {
-  width: 50%;
-}
-
-.nav-list {
-  display: flex;
-  height: 100%;
-  background-color: darkgoldenrod;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
-}
-.nav-list li {
-  font-size: 20px;
-  font-weight: 300;
-}
-.nav-list li a {
-  text-decoration: none;
-  color: #2d221f;
-}
-
-.container-wrapper {
-  display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  margin: auto;
-}
-
-.box1 {
-  background-color: yellow;
-  height: 100vh;
-}
-
-.box2 {
-  background-color: green;
-  height: 100vh;
-}
-
-.box3 {
-  background-color: blue;
-  height: 100vh;
-}
-
-/*# sourceMappingURL=master.css.map */
+@font-face{src:url("../fonts/NotoSans-LightItalic.ttf") format("ttf");font-family:"NotoSans-LightItalic",serif;font-weight:300}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}body{font-family:"Noto Sans",sans-serif}main{background:url(../images/background.png) no-repeat center;width:100%}.hidden{display:none}.container-wrapper{display:flex;flex-direction:column;max-width:100%;margin:auto}.box1{border:solid 1px #ff0;height:100vh}.box2{border:solid 1px green;height:100vh}.box3{border:solid 1px blue;height:100vh}footer{background-color:#9932cc;height:80px;width:100%;display:grid;grid-template-columns:1fr 0fr;align-items:center}.copyright{background-color:darkred;height:60px;width:150px}.sns{background-color:#e9967a;height:60px;width:150px}header{width:100%;height:80px;background:#fff;overflow:hidden;position:fixed;top:0;display:flex;justify-content:space-between}img{width:80px;height:100%}.nav-list{display:flex;flex-direction:column;width:100%;height:50%;justify-content:space-around;align-items:center;margin-left:auto;font-family:"Libre Baskerville",serif}.nav-list li{font-size:30px;font-weight:700;letter-spacing:2px}.nav-list li a{text-decoration:none;color:#2d221f}.mNav{width:40%;height:100%;background-color:#ffece7;position:fixed;top:0;right:-700px;display:flex;justify-content:center;align-items:center}.change{right:0}.hamburger-menu{width:40px;height:40px;position:fixed;top:19px;right:20px;cursor:pointer;display:flex;flex-direction:column;justify-content:space-around}.hamburger-menu .line-2{width:80%;margin-left:13px}.line{width:100%;height:1px;background-color:#2d221f;transition:all .5s}.change .line-1{transform:scale(0.5) rotate(-45deg) translate(-25px, 13px)}.change .line-2{opacity:0}.change .line-3{transform:scale(0.5) rotate(45deg) translate(-25px, -13px)}.nav-list{text-align:right}.nav-item{margin:25px}.nav-link{text-decoration:none;color:#2d221f;text-transform:uppercase;position:relative;padding-top:5px}.nav-link ::before{content:"";width:100%;height:2px;background-color:#b8860b;position:absolute;left:0;transform:scaleX(0);transition:transform .5s}.nav-link ::before{top:0;transform-origin:left}.nav-link :hover::before{transform:scaleX(1)}#main-content{display:flex;align-items:center}.Text{display:flex;justify-content:center;flex-direction:column;width:1000px;height:500px;position:relative;z-index:1;color:#2d221f}.subText{display:flex;align-items:center;font-family:"NotoSans-LightItalic",serif;font-size:25px;width:100%;margin-bottom:50px}.subLine{margin-right:20px;display:block;height:1px;width:455px;background-color:#2d221f}.mainText{width:700px;text-align:left;align-self:flex-end}.mainText .drawing{-webkit-text-fill-color:#fff;-webkit-text-stroke-width:2px;-webkit-text-stroke-color:#2d221f;font-size:80px;margin-left:50px}.mainText h3{font-family:"Libre Baskerville",serif;font-size:100px;font-weight:700;line-height:120px}.mainIllust{width:640px;height:640px;background-color:#008b8b;position:absolute;right:80px}@media screen and (max-width: 768px){.mNav{width:100%}}/*# sourceMappingURL=master.css.map */
