--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     height: 80px;
-    background: $blue-bg-color;
+    background: white;
     overflow: hidden;
     position: fixed;
     top:0;
@@ -15,28 +15,121 @@ img {
     height: 100%;
 }
 
-.mNav {
-    width: 50%;
-}
-
 .nav-list {
     display: flex;
-    height: 100%;
-    background-color: darkgoldenrod;
+    flex-direction: column;
+    // background-color: #b8860b;
     width: 100%;
+    height: 50%;
     justify-content: space-around;
     align-items: center;
     margin-left: auto;
+    font-family: $main-font;
+    
 
     li { 
-        font-size: 20px;
-        font-weight: 300;
+        font-size: 30px;
+        font-weight: 700;
+        letter-spacing: 2px;
 
        a {  text-decoration: none;
             color: $main-text-color; }
     }
+}    
+
+.mNav {
+    width: 40%;
+    height: 100%;
+    background-color: $pink;
+    position: fixed;
+    top: 0;
+    right: -700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
+.change {
+    right: 0;
+}
+
+.hamburger-menu {
+    width: 40px;
+    height: 40px;
+    // background-color: red;
+    position: fixed;
+    top:19px;
+    right:20px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    .line-2 {
+        width: 80%;
+        margin-left: 13px;
+    }
+    
+}
+
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: $main-text-color;
+    transition: all 0.5s;
+}
+
+.change .line-1 {
+    transform: scale(0.5) rotate(-45deg) translate(-25px, 13px);
+   }
+   
+.change .line-2 {
+    opacity: 0;
+}
+
+.change .line-3 {
+    transform: scale(0.5) rotate(45deg) translate(-25px, -13px);
+}
+
+.nav-list {
+    text-align: right;
+}
+
+.nav-item {
+    margin: 25px;
+   
+}
+
+.nav-link {
+
+    text-decoration: none;
+    color:#2d221f;
+    text-transform: uppercase;
+    position: relative;
+    padding-top: 5px;
+      
+    ::before {
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: darkgoldenrod;
+        position: absolute;
+        left: 0;
+        transform: scaleX(0);
+        transition: transform 0.5s;
+    }
+    
+    ::before {
+        top: 0;
+        transform-origin: left;
+    }
+    
+    :hover::before {
+        transform: scaleX(1);
+    }
+}
 
 
 
