--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+#home {
+    background: url(../images/background.png) no-repeat center;
+    width: 100%;
+}
+
 .Text {
     display: flex;
     justify-content: center;
@@ -20,7 +25,7 @@
     display: flex;
     align-items: center;
     font-family: "NotoSans-LightItalic", serif;
-    font-size:25px;
+    font-size:28px;
     width: 100%;
     // background-color: darkcyan;
     margin-bottom: 50px;
@@ -37,7 +42,7 @@
 
 .mainText {
 
-    width: 700px;
+    width: 800px;
     text-align: left;
     // background-color: #a9a9a9;
     align-self: flex-end;
@@ -50,6 +55,7 @@
         -webkit-text-stroke-color: $main-text-color;
         font-size: 80px;
         margin-left: 50px;
+        
 
     }
 
@@ -58,6 +64,7 @@
         font-size: 100px;
         font-weight: 700;
         line-height: 120px;
+        letter-spacing: 3px;
     }
 
 }
@@ -70,4 +77,152 @@
     right: 80px;
     
 }
+
+#aboutMe-content {
+    display: flex;
+    flex-direction: column;
+}
+
+h2 {
+    font-family: "NotoSans-LightItalic", serif;
+    font-size: 28px;
+    padding-top: 80px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.portfolio-title {
+    background:url(../images/portfolio.png) no-repeat center;
+}
+
+.aboutMe-title {
+    background:url(../images/about-me.png) no-repeat center;
+}
+
+.aboutMe-container {
+    // background-color: lightblue;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 50px;
+    align-items: center;
+}
+
+.designer {
+    grid-column: 1/2;
+    justify-self: end;
+    text-align: center;
+    position: relative;
+
+    h3 {
+        font-family: $main-font;
+        font-size: 70px;
+        font-weight: 700;
+        line-height: 70px;
+   }
+
+   p {
+        font-size: 20px;
+        margin-top: 30px;
+        line-height: 25px;
+   }
+
+   .adj {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: $main-text-color;
+        font-size: 60px;
+        letter-spacing: 3px;
+   
+    }
+    .deco-line {
+        position: absolute;
+        left: 350px;
+        bottom: 180px;
+    }
+}
+
+
+
+
+.my-selfie {
+    grid-column: 2/3;
+    justify-self: center;
+    
+    
+}
+
+.my-info{
+    grid-column: 3/4;
+    justify-self: start;
+
+    h4 {
+        font-family: "NotoSans-Medium", serif;
+        font-size: 18px;
+        
+        margin-bottom: 30px;
+    }
+    
+    h5 {
+        font-family: "NotoSans-LightItalic", serif;
+        color: $sub-text-color;
+        font-size: 20px;
+        line-height: 25px;
+    }
+    p {
+        color: $sub-text-color;
+        font-size: 20px;
+        line-height: 25px;
+        margin-bottom: 20px;
+        margin-left: 30px;
+    }
+
+}
+
+.skill-graph {
+    height: 10px;
+    width: 70px;
+    display: inline-block;
+    vertical-align: baseline;
+    margin-right: 5px;
+}
+
+.button {
+    background: rgb(156,241,240);
+    background: -moz-linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
+    background: linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9cf1f0",endColorstr="#fef281",GradientType=1);
+    border: none;
+    border-radius: 30px;
+    box-shadow: 1px 1px 4px rgba(56, 55, 55, 0.2);
+    color: white;
+    padding: 15px 30px;
+    margin-top:30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+
+// .Education {
+//     display: flex;
+//     flex-direction: column;
+//   }
+
+
+// .skill {
+//     display: flex;
+//     flex-direction: column;
+// }
+
+.skill-text-container {
+    display: flex;
+
+}
+
 
