--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -7,10 +7,11 @@ header {
     top:0;
     display: flex;
     justify-content: space-between;
+    z-index: 3;
     
 }
 
-img {
+.logo {
     width: 80px;
     height: 100%;
 }
