--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -2,6 +2,7 @@ header {
     width: 100%;
     height: 80px;
     background: white;
+    box-shadow: 0px 1px 4px rgba(56, 55, 55, 0.1);
     overflow: hidden;
     position: fixed;
     top:0;
@@ -44,7 +45,7 @@ header {
     background-color: $pink;
     position: fixed;
     top: 0;
-    right: -700px;
+    right: -1500px;
     display: flex;
     justify-content: center;
     align-items: center;
