--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -22,9 +22,10 @@
 }
 
 .subText {
+    font-weight: 300;
+    font-style: italic;
     display: flex;
     align-items: center;
-    font-family: "NotoSans-LightItalic", serif;
     font-size:28px;
     width: 100%;
     // background-color: darkcyan;
@@ -131,7 +132,9 @@
 
 
 h2 {
-    font-family: "NotoSans-LightItalic", serif;
+    font-family: $sub-font;
+    font-weight: 300;
+    font-style: italic;
     font-size: 28px;
     padding-top: 80px;
     text-align: center;
@@ -241,14 +244,14 @@ h2 {
     align-self: center;
 
     h4 {
-        font-family: "NotoSans-Medium", serif;
+        font-weight: 500;
         font-size: 18px;
         margin-bottom: 20px;
         margin-top: 50px;
     }
     
     h5 {
-        font-family: "NotoSans-LightItalic", serif;
+        font-weight: 300;
         color: $sub-text-color;
         font-size: 20px;
         line-height: 25px;
@@ -263,7 +266,7 @@ h2 {
     }
 
     .college-info {
-        font-family: "NotoSans-LightItalic", serif;  
+        font-style: italic;
         font-size: 16px;   
         letter-spacing: 1px;
     }
