--- a/css/master.css
+++ b/css/master.css
@@ -1,182 +1,1 @@
-@media screen and (max-width: 769px) {
-  .mNav {
-    width: 100%;
-    height: 100%;
-    background-color: cornflowerblue;
-    position: fixed;
-    top: 0;
-    right: -500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .change {
-    right: 0;
-  }
-
-  .hamburger-menu {
-    width: 60px;
-    height: 60px;
-    background-color: red;
-    position: fixed;
-    top: 10px;
-    right: 20px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-  .line {
-    width: 100%;
-    height: 3px;
-    background-color: chocolate;
-    transition: all 0.5s;
-  }
-
-  .change .line-1 {
-    transform: scale(0.5) rotate(-45deg) translate(-25px, 30px);
-  }
-
-  .change .line-2 {
-    opacity: 0;
-  }
-
-  .change .line-3 {
-    transform: scale(0.5) rotate(45deg) translate(-25px, -30px);
-  }
-
-  .nav-list {
-    text-align: right;
-  }
-
-  .nav-item {
-    margin: 25px;
-  }
-
-  .nav-link {
-    text-decoration: none;
-    color: #2d221f;
-    text-transform: uppercase;
-    position: relative;
-    padding-top: 5px;
-  }
-  .nav-link ::before {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: darkgoldenrod;
-    position: absolute;
-    left: 0;
-    transform: scaleX(0);
-    transition: transform 0.5s;
-  }
-  .nav-link ::before {
-    top: 0;
-    transform-origin: left;
-  }
-  .nav-link :hover::before {
-    transform: scaleX(1);
-  }
-}
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-body {
-  font-family: "Noto Sans", sans-serif;
-}
-
-.hidden {
-  display: none;
-}
-
-footer {
-  background-color: darkorchid;
-  height: 80px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 0fr;
-  align-items: center;
-}
-
-.copyright {
-  background-color: darkred;
-  height: 60px;
-  width: 150px;
-}
-
-.sns {
-  background-color: darksalmon;
-  height: 60px;
-  width: 150px;
-}
-
-header {
-  width: 100%;
-  height: 80px;
-  background: #9cf1f0;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-img {
-  width: 80px;
-  height: 100%;
-}
-
-.mNav {
-  width: 50%;
-}
-
-.nav-list {
-  display: flex;
-  height: 100%;
-  background-color: darkgoldenrod;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
-}
-.nav-list li {
-  font-size: 20px;
-  font-weight: 300;
-}
-.nav-list li a {
-  text-decoration: none;
-  color: #2d221f;
-}
-
-.container-wrapper {
-  display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  margin: auto;
-}
-
-.box1 {
-  background-color: yellow;
-  height: 100vh;
-}
-
-.box2 {
-  background-color: green;
-  height: 100vh;
-}
-
-.box3 {
-  background-color: blue;
-  height: 100vh;
-}
-
-/*# sourceMappingURL=master.css.map */
+@media screen and (max-width: 769px){.mNav{width:100%;height:100%;background-color:#6495ed;position:fixed;top:0;right:-500px;display:flex;justify-content:center;align-items:center}.change{right:0}.hamburger-menu{width:60px;height:60px;background-color:red;position:fixed;top:10px;right:20px;cursor:pointer;display:flex;flex-direction:column;justify-content:space-around}.line{width:100%;height:3px;background-color:#d2691e;transition:all .5s}.change .line-1{transform:scale(0.5) rotate(-45deg) translate(-25px, 30px)}.change .line-2{opacity:0}.change .line-3{transform:scale(0.5) rotate(45deg) translate(-25px, -30px)}.nav-list{text-align:right}.nav-item{margin:25px}.nav-link{text-decoration:none;color:#2d221f;text-transform:uppercase;position:relative;padding-top:5px}.nav-link ::before{content:"";width:100%;height:2px;background-color:#b8860b;position:absolute;left:0;transform:scaleX(0);transition:transform .5s}.nav-link ::before{top:0;transform-origin:left}.nav-link :hover::before{transform:scaleX(1)}}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}body{font-family:"Noto Sans",sans-serif}.hidden{display:none}footer{background-color:#9932cc;height:80px;width:100%;display:grid;grid-template-columns:1fr 0fr;align-items:center}.copyright{background-color:darkred;height:60px;width:150px}.sns{background-color:#e9967a;height:60px;width:150px}header{width:100%;height:80px;background:#9cf1f0;overflow:hidden;position:fixed;top:0;display:flex;justify-content:space-between}img{width:80px;height:100%}.mNav{width:50%}.nav-list{display:flex;height:100%;background-color:#b8860b;width:100%;justify-content:space-around;align-items:center;margin-left:auto}.nav-list li{font-size:20px;font-weight:300}.nav-list li a{text-decoration:none;color:#2d221f}.container-wrapper{display:flex;flex-direction:column;max-width:100%;margin:auto}.box1{background-color:#ff0;height:100vh}.box2{background-color:green;height:100vh}.box3{background-color:blue;height:100vh}/*# sourceMappingURL=master.css.map */
