--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -7,131 +7,159 @@ header {
     position: fixed;
     top:0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     z-index: 3;
     
 }
-
-.logo {
-    width: 80px;
-    height: 100%;
+nav {
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .nav-list {
     display: flex;
-    flex-direction: column;
-    // background-color: #b8860b;
-    width: 100%;
-    height: 50%;
     justify-content: space-around;
-    align-items: center;
+    width: 30%;
     margin-left: auto;
-    font-family: $main-font;
-    
+    font-weight: 300;
+    letter-spacing: 1px;
 
-    li { 
-        font-size: 30px;
-        font-weight: 700;
-        letter-spacing: 2px;
-
-       a {  text-decoration: none;
-            color: $main-text-color; }
-    }
-}    
-
-.mNav {
-    width: 40%;
-    height: 100%;
-    background-color: $pink;
-    position: fixed;
-    top: 0;
-    right: -1500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    a {  text-decoration: none;
+        color: $main-text-color; }
 }
 
-.change {
-    right: 0;
-}
+// .hamburger-menu {display: none;}
 
 .hamburger-menu {
-    width: 40px;
-    height: 40px;
-    // background-color: red;
-    position: fixed;
-    top:19px;
-    right:20px;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-    .line-2 {
-        width: 80%;
-        margin-left: 13px;
-    }
-    
+    display: none;
 }
-
 
 .line {
-    width: 100%;
+    width: 30px;
     height: 1px;
+    margin: 5px;
     background-color: $main-text-color;
-    transition: all 0.5s;
+    
+    // transition: all 0.5s;
 }
 
-.change .line-1 {
-    transform: scale(0.5) rotate(-45deg) translate(-25px, 13px);
-   }
+// .nav-list {
+//     display: flex;
+//     flex-direction: column;
+//     // background-color: #b8860b;
+//     width: 100%;
+//     height: 50%;
+//     justify-content: space-around;
+//     align-items: center;
+//     margin-left: auto;
+//     font-family: $main-font;
+    
+
+//     li { 
+//         font-size: 30px;
+//         font-weight: 700;
+//         letter-spacing: 2px;
+
+//        a {  text-decoration: none;
+//             color: $main-text-color; }
+//     }
+// }    
+
+// .mNav {
+//     width: 40%;
+//     height: 100%;
+//     background-color: $pink;
+//     position: fixed;
+//     top: 0;
+//     right: -1500px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+    
+// }
+
+// .change {
+//     right: 0;
+// }
+
+// .hamburger-menu {
+//     width: 40px;
+//     height: 40px;
+//     // background-color: red;
+//     position: fixed;
+//     top:19px;
+//     right:20px;
+//     cursor: pointer;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-around;
+
+//     .line-2 {
+//         width: 80%;
+//         margin-left: 13px;
+//     }
+    
+// }
+
+
+// .line {
+//     width: 100%;
+//     height: 1px;
+//     background-color: $main-text-color;
+//     transition: all 0.5s;
+// }
+
+// .change .line-1 {
+//     transform: scale(0.5) rotate(-45deg) translate(-25px, 13px);
+//    }
    
-.change .line-2 {
-    opacity: 0;
-}
+// .change .line-2 {
+//     opacity: 0;
+// }
 
-.change .line-3 {
-    transform: scale(0.5) rotate(45deg) translate(-25px, -13px);
-}
+// .change .line-3 {
+//     transform: scale(0.5) rotate(45deg) translate(-25px, -13px);
+// }
 
-.nav-list {
-    text-align: right;
-}
+// .nav-list {
+//     text-align: right;
+// }
 
-.nav-item {
-    margin: 25px;
+// .nav-item {
+//     margin: 25px;
    
-}
+// }
 
-.nav-link {
+// .nav-link {
 
-    text-decoration: none;
-    color:#2d221f;
-    text-transform: uppercase;
-    position: relative;
-    padding-top: 5px;
+//     text-decoration: none;
+//     color:#2d221f;
+//     text-transform: uppercase;
+//     position: relative;
+//     padding-top: 5px;
       
-    ::before {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background-color: darkgoldenrod;
-        position: absolute;
-        left: 0;
-        transform: scaleX(0);
-        transition: transform 0.5s;
-    }
+//     ::before {
+//         content: "";
+//         width: 100%;
+//         height: 2px;
+//         background-color: darkgoldenrod;
+//         position: absolute;
+//         left: 0;
+//         transform: scaleX(0);
+//         transition: transform 0.5s;
+//     }
     
-    ::before {
-        top: 0;
-        transform-origin: left;
-    }
+//     ::before {
+//         top: 0;
+//         transform-origin: left;
+//     }
     
-    :hover::before {
-        transform: scaleX(1);
-    }
-}
+//     :hover::before {
+//         transform: scaleX(1);
+//     }
+// }
 
 
 
