--- a/sass/master.scss
+++ b/sass/master.scss
@@ -6,6 +6,7 @@
 @import 'modules/_main.scss';
 @import 'modules/_nav.scss';
 @import 'modules/_index.scss';
+@import 'modules/_portfolio';
 
 @import 'modules/_mediaqueries';
 
