--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1130px) {
+    .mNav {
+        width: 50%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .mNav {
         width: 100%;
