--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -14,7 +14,6 @@
     justify-content: center;
     flex-direction: column;
     width: 1100px;
-    height: 500px;
     // background-color: chartreuse;
     position: relative;
     z-index: +1;
@@ -27,7 +26,6 @@
     display: flex;
     align-items: center;
     font-size:28px;
-    width: 100%;
     // background-color: darkcyan;
     margin-bottom: 50px;
 }
@@ -75,7 +73,8 @@
     height: 640px;
     position:absolute;
     right: 200px;
-    top: 290px;
+    top: 180px;
+    background-color: lightcoral;
 }
 
 #flower {
@@ -253,7 +252,7 @@ h2 {
     h5 {
         font-weight: 300;
         color: $sub-text-color;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 25px;
         height: 50%;
     }
