--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -12,11 +12,6 @@ header {
     
 }
 
-.logo {
-    width: 80px;
-    height: 100%;
-}
-
 .nav-list {
     display: flex;
     flex-direction: column;
@@ -45,10 +40,12 @@ header {
     background-color: $pink;
     position: fixed;
     top: 0;
-    right: -1500px;
+    right: -800px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: right 0.3s cubic-bezier(0,0,0.3,1);
+    
     
 }
 
@@ -74,7 +71,6 @@ header {
     }
     
 }
-
 
 .line {
     width: 100%;
@@ -105,33 +101,25 @@ header {
 }
 
 .nav-link {
-
     text-decoration: none;
     color:#2d221f;
     text-transform: uppercase;
     position: relative;
-    padding-top: 5px;
-      
-    ::before {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background-color: darkgoldenrod;
-        position: absolute;
-        left: 0;
-        transform: scaleX(0);
-        transition: transform 0.5s;
-    }
-    
-    ::before {
-        top: 0;
-        transform-origin: left;
-    }
-    
-    :hover::before {
-        transform: scaleX(1);
-    }
 }
 
+.nav-link::before {
+    content: "";
+    width: 100%;
+    height: 5px;
+    background-color: white;
+    position: absolute;
+    top:0;
+    transform: scale(0) ;
+    transition: transform 0.5s;
+}
+
+.nav-link:hover::before {
+        transform: scaleX(1);
+    }
 
 
