--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -15,6 +15,7 @@
 
 .port-sub-text {
     font-weight: 300;
+    letter-spacing: 5px;
     font-style: italic;
     align-self: flex-end;
     display: flex;
