--- a/sass/master.scss
+++ b/sass/master.scss
@@ -6,7 +6,8 @@
 @import 'modules/_main.scss';
 @import 'modules/_nav.scss';
 @import 'modules/_index.scss';
-@import 'modules/_portfolio';
+@import 'modules/_portfolio.scss';
+@import 'modules/contact.scss';
 
 @import 'modules/_mediaqueries';
 
