--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -22,6 +22,7 @@
 
 .subText {
     font-weight: 300;
+    letter-spacing: 5px;
     font-style: italic;
     display: flex;
     align-items: center;
@@ -138,6 +139,7 @@ h2 {
     padding-top: 80px;
     text-align: center;
     margin-top: 20px;
+    letter-spacing: 5px;
 }
 
 .content-container {
@@ -251,6 +253,7 @@ h2 {
     
     h5 {
         font-weight: 300;
+        letter-spacing: 5px;
         color: $sub-text-color;
         font-size: 18px;
         line-height: 25px;
@@ -285,10 +288,7 @@ h2 {
 }
 
 .button {
-    background: rgb(156,241,240);
-    background: -moz-linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
-    background: linear-gradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
+    @include linearGradient(90deg, rgba(156,241,240,1) 0%, rgba(153,240,187,1) 50%, rgba(254,242,129,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9cf1f0",endColorstr="#fef281",GradientType=1);
     border: none;
     border-radius: 30px;
