--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -1,9 +1,9 @@
 .contact-title {
     font-weight: 300;
-        letter-spacing: 5px;
-        font-style: italic;
-        font-size:28px;
-        margin: 80px 0 50px 0;
+    letter-spacing: 5px;
+    font-style: italic;
+    font-size:28px;
+    margin: 80px 0 60px 0;
 }
 
 #contact-section {
@@ -14,27 +14,37 @@
 .contact-sub-line {
     display: block;
     height: 1px;
-    width: 455px;
+    width: 1000px;
     background-color: $main-text-color;
+    margin-left: 5em;
+    margin-bottom: 15px;
 }
 
 .contact-info {
     width: 500px;
-    height: 330px;
-    background-color: lightcoral;
+    height: 120px;
+    // background-color: #f08080;
+    align-self: center;
+    padding-left: 150px;
 
     h3 {
         font-size: 20px;
         letter-spacing: 2px;
         font-family: $main-font;
         font-weight: 700;
+        line-height: 3em;
+        img {
+            vertical-align: middle; margin-right: 20px;
+        }
+        .add-icon {
+            margin: 0;
+        }
     }
 
 }
 
 #mail-form {
     width: 400px;
-    height: 330px;
     // background-color: lightgreen;
     align-self: center;
 }
