--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -5,7 +5,7 @@
 }
 
 #home {
-    background: url(../images/background.png) no-repeat center;
+    background: url(../images/background-big.png) no-repeat center;
     width: 100%;
 }
 
@@ -146,7 +146,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 130px;
+    margin-top: 60px;
 }
 
 .portfolio-title {
@@ -253,7 +253,7 @@ h2 {
     
     h5 {
         font-weight: 300;
-        letter-spacing: 5px;
+        letter-spacing: 2px;
         color: $sub-text-color;
         font-size: 18px;
         line-height: 25px;
@@ -292,7 +292,7 @@ h2 {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9cf1f0",endColorstr="#fef281",GradientType=1);
     border: none;
     border-radius: 30px;
-    box-shadow: 1px 1px 4px rgba(56, 55, 55, 0.1);
+    @include boxShadow(1px 1px 4px rgba(56, 55, 55, 0.1));
     color: white;
     padding: 15px 30px;
     margin-top:30px;
