--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -1,4 +1,9 @@
 
+@media screen and (max-width: 1680px) {
+    #home {
+        background: url(../images/background-middle.png) no-repeat center;
+    }
+}
 
 @media screen and (max-width: 1130px) {
     .mNav {
