--- a/sass/modules/_mixins.scss
+++ b/sass/modules/_mixins.scss
@@ -13,3 +13,11 @@
   -o-box-shadow:$property;
   -ms-box-shadow:$property;
 }
+
+@mixin filter($filter-type,$filter-amount) { 
+  -webkit-filter: $filter-type+unquote('(#{$filter-amount})');
+  -moz-filter: $filter-type+unquote('(#{$filter-amount})');
+  -ms-filter: $filter-type+unquote('(#{$filter-amount})');
+  -o-filter: $filter-type+unquote('(#{$filter-amount})');
+  filter: $filter-type+unquote('(#{$filter-amount})');
+}
