--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -105,3 +105,8 @@ select {
     span { padding-right: 0.5em; }
 }
 
+#error {
+    color: rgb(255, 112, 77);
+    margin-left:20px;
+    display: inline-block;
+}
