--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -113,7 +113,7 @@
 }
 
 
-.video-content {
+.video-lightbox {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -159,7 +159,7 @@
     flex-direction: column;
     align-items: center;
     // background-color: antiquewhite;
-    width: 80%;
+    width: 85%;
     margin: auto;
 }
 
@@ -185,20 +185,21 @@
    
 
     .proj-text {
-        left: -250px;
+        left: -300px;
         text-align: right;
     }
 }
 
 .proj-item:nth-of-type(even) {
     .proj-text {
-        right: -250px;
+        right: -300px;
     }
 }
 
 .proj-img {
     img {
-        opacity: 0.5;
+        cursor: pointer;
+        opacity: 0.4;
         @include filter(grayscale, 1);
     }
 
@@ -207,3 +208,4 @@
         @include filter(grayscale, 0);
     }
 }
+
