--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -1,12 +1,11 @@
+#home {
+    background: url(../images/background-big.png) no-repeat center;
+}
+
 #main-content {
 
     display: flex;
     align-items: center;
-}
-
-#home {
-    background: url(../images/background-big.png) no-repeat center;
-    width: 100%;
 }
 
 .Text {
@@ -75,7 +74,7 @@
     position:absolute;
     right: 200px;
     top: 180px;
-    background-color: lightcoral;
+    background: url(../images/flower.svg) no-repeat center;
 }
 
 #flower {
@@ -138,7 +137,7 @@ h2 {
     font-size: 28px;
     padding-top: 80px;
     text-align: center;
-    margin-top: 20px;
+    margin: 50px 0 100px 0;
     letter-spacing: 5px;
 }
 
@@ -146,41 +145,21 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 60px;
+    margin-bottom: 100px;
 }
 
-.portfolio-title {
-    background:url(../images/portfolio.png) no-repeat center;
-}
 
 .portfolio-imgs {
-    display: inline-block;
     // background-color: lightcoral;
     flex-basis: 55%;
-    position: relative;
-    height: 650px;
+    text-align: center
 }
 
-.beer {
-    margin-top: 95px;
-}
-
-.jar {
-    position: absolute;
-    bottom: 0;
-}
-
-.sportsnet {
-    position: absolute;
-}
 
 #aboutMe-content {
     display: flex;
     flex-direction: column;
-}
-
-.aboutMe-title {
-    background:url(../images/about-me.png) no-repeat center;
+    flex-basis: auto;
 }
 
 #portfolio-content .graphic {
