--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -89,12 +89,11 @@
     background-color: violet;
     height: 750px;
     // text-align: center;
-    
     position: relative;
 
     .thumb {
-        // max-width: 800px;
         position: absolute;
+        max-width: 800px;
         top: 0;
         bottom: 0;
         left: 0;
@@ -103,6 +102,8 @@
         @include boxShadow(1px 1px 4px rgba(56, 55, 55, 0.1));
     }
 }
+
+
 
 .demo-bg {
     background:url(../images/port-demo-bg.jpg) no-repeat center;
