--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -68,7 +68,7 @@
     position:absolute;
     right: 700px;
     top: 180px;
-    background-color: lightcoral;
+    background: url(../images/balloons.svg) no-repeat center;
 }
 
 #demo-content {
@@ -94,6 +94,10 @@
     }
 }
 
+.update-img {
+    height: 300px;
+}
+
 
 
 .demo-bg {
@@ -108,6 +112,10 @@
     background:url(../images/port-kid-bg.jpg) no-repeat center;
 }
 
+.update-bg {
+    background-color: ivory;
+}
+
 
 .lightbox {
     display: none;
@@ -116,7 +124,7 @@
     bottom: 0;
     width: 100vw;
     height: 100vh;
-    background-color:rgba(255, 255, 255, 0.9);
+    background-color:rgba(255, 255, 255, 0.95);
     color: $main-font;
     padding: 40px;
     z-index: 3;
@@ -135,6 +143,8 @@
     right: 60px;
     cursor: pointer;
     max-width: 25px;
+    width: 15px;
+    height: 15px;
 }
 
 .show-lightbox {
@@ -145,7 +155,7 @@
     text-align: center;
 
     h3 {
-        margin: 20px;
+        margin: 40px 0 20px 0;
         font-style: italic;
         color: $sub-text-color;
     }
@@ -229,4 +239,10 @@
 
 .graphic-template {
     text-align: center;
+}
+
+.graphic-descip {
+    line-height: 35px;
+    width: 500px;
+    margin: auto;
 }
