--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -11,6 +11,10 @@
     position: relative;
     z-index: +1;
     color:$main-text-color;
+    animation: fadein 1s ease-in;
+    -moz-animation: fadein 1s ease-in; /* Firefox */
+    -webkit-animation: fadein 1s ease-in; /* Safari and Chrome */
+    -o-animation: fadein 1s ease-in;
 }
 
 .port-sub-text {
@@ -39,9 +43,7 @@
     text-align: left;
     // background-color: #a9a9a9;
     align-self: flex-end;
-
-    
-
+ 
     .port-jihees{
         -webkit-text-fill-color: white;
         -webkit-text-stroke-width: 2px;
@@ -69,6 +71,42 @@
     right: 700px;
     top: 180px;
     background: url(../images/balloons.svg) no-repeat center;
+
+    animation:animatedbang 3s ease-in-out infinite;
+    -moz-animation:animatedbang 3s ease-in-out infinite;
+    -webkit-animation:animatedbang 3s ease-in-out infinite;
+    -o-animation:animatedbang 3s ease-in-out infinite;
+    
+
+}
+
+@keyframes animatedbang
+
+{
+0%{transform:translateY(10px);}
+50%{transform:translateY(-10px);}
+100%{transform:translateY(10px);}
+}
+@-moz-keyframes animatedbang
+
+{
+0%{transform:translateY(10px);}
+50%{transform:translateY(-10px);}
+100%{transform:translateY(10px);}
+}
+@-webkit-keyframes animatedbang
+
+{
+0%{transform:translateY(10px);}
+50%{transform:translateY(-10px);}
+100%{transform:translateY(10px);}
+}
+@-o-keyframes animatedbang
+
+{
+0%{transform:translateY(10px);}
+50%{transform:translateY(-10px);}
+100%{transform:translateY(10px);}
 }
 
 #demo-content {
@@ -81,6 +119,10 @@
     height: 750px;
     // text-align: center;
     position: relative;
+    animation: fadein 0.3s ease-in;
+    -moz-animation: fadein 0.3s ease-in; /* Firefox */
+    -webkit-animation: fadein 0.3s ease-in; /* Safari and Chrome */
+    -o-animation: fadein 0.3s ease-in;
 
     .thumb {
         position: absolute;
@@ -116,7 +158,6 @@
     background-color: ivory;
 }
 
-
 .lightbox {
     display: none;
     position: fixed;
@@ -129,11 +170,50 @@
     padding: 40px;
     z-index: 3;
     overflow: scroll;
+    animation: fadein 1s;
+    -moz-animation: fadein 0.3s; /* Firefox */
+    -webkit-animation: fadein 0.3s; /* Safari and Chrome */
+    -o-animation: fadein 0.3s;
 
+  
     span {
         color: $main-font;
         font-size: 2em;
         cursor: pointer;
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
     }
 }
 
@@ -169,6 +249,8 @@
         cursor: pointer;
         margin: 15px;
         @include filter(grayscale, 1);
+        @include transition(.3s ease-in-out);
+        transition: .3s ease-in-out;
     }
 
     img:hover {
@@ -223,6 +305,7 @@
         cursor: pointer;
         opacity: 0.4;
         @include filter(grayscale, 1);
+        @include transition(.3s ease-in-out);
     }
 
     img:hover {
