--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -62,7 +62,14 @@ footer {
 .sns {
     display: flex;
     // background-color: darksalmon;
-    
+    a {
+        text-decoration: none;
+        color:$main-text-color;
+    }
+
+    a:hover {
+        text-decoration-line: underline;
+    }
 
     h3 {
         align-self: center;
